cmake_minimum_required(VERSION 3.26)
project(prog2001_BIT230044_NguyenNgocAnh C)

set(CMAKE_C_STANDARD 11)

# Bài 1
add_executable(bai1 Chapter01/ExOne/src/bai1.c)

# Bài 2
add_executable(bai2 Chapter01/ExTwo/src/bai2.c)

# Bài 3
add_executable(bai3 Chapter0/ExOne/src/ba6.c)

# Bài 4
add_executable(bai4 Chapter0/ExTwo/src/bai7.c)
add_executable(bai6 Chapter02/ExThree/src/bai6.c)
add_executable(bai7 Chapter02/ExThree/src/bai7.c)
add_executable(bai8 Chapter02/ExThree/src/bai8.c)